# s2-ruck-master

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  ruck_master.ini
ruck_master_presets/: cop.json  vanilla.json
src/: comparator_hook.cpp  comparator_hook.h  comparer_hook.cpp  comparer_hook.h  config.cpp  config.h  config_loader.cpp  config_loader.h  constants.h  context.cpp  context.h  context_function_wrapper.h  dllmain.cpp  function_info.h  global_context.h  hooking.cpp  hooking.h  hooking_result.h  lambda_traits.h  local_types.h  log.h  menu.cpp  menu.h  presets.cpp  presets.h  print.h  ruck_master.cpp  signature_validator.cpp  signature_validator.h
